--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
-    "tailwind": "^4.0.0"
+    "react-toastify": "^9.1.3",
+    "tailwind": "^4.0.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
