--- a/client/.gitignore
+++ b/client/.gitignore
@@ -6,11 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 node_modules
 dist
 dist-ssr
 *.local
+.env 
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +23,4 @@ dist-ssr
 *.sln
 *.sw?
 constants.js
+.env
